<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rose Schedule</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_right_now">Right Now</string>
    <string name="title_daily_view">Daily View</string>
    <string name="title_weekly_view">Weekly View</string>
    <string name="class_text">%1$s in %2$s</string>
    <string name="daily_fragment_title">%1$s\'s Schedule</string>
    <string name="schedule">Schedule</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="class_start_time">Starts at %1$s</string>
    <string name="class_end_time">Ends at %1$s</string>
    <string name="class_time_relative">in %1$s</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">TR</string>
    <string name="friday_short">F</string>
    <string name="period_title">%1$s\n%2$s</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_schedule">Edit Schedule</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_login">Login</string>
    <string name="title_edit_schedule" tools:ignore="ExtraTranslation">Edit Schedule</string>
    <string name="title_activity_edit_period">EditPeriodActivity</string>
    <string name="class_">Class</string>
    <string name="location">Location</string>
    <string name="free_period">Free Period</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
