<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.rosehulman.condrak.roseschedule.MainActivity">
    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/action_edit_schedule"
            android:orderInCategory="100"
            android:title="@string/action_edit_schedule"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_notifications"
            android:orderInCategory="100"
            android:title="@string/action_notifications"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/group_auth">
        <item
            android:id="@+id/action_login"
            android:orderInCategory="100"
            android:title="@string/action_login"
            app:showAsAction="never" />
    </group>
</menu>